--- a/Style.css
+++ b/Style.css
@@ -38,9 +38,9 @@ nav{
 	}
 		nav ul li {
 			display: inline-block;
-			margin-left: -7px;			
+			margin-left: 10px;			
 			line-height: 40px;
-			border-left: 1px solid rgba(39,52,105,1);
+			5border-left: 1px solid rgba(39,52,105,1);
 			font-weight: bold;
 
 		}
@@ -56,10 +56,9 @@ nav{
 				}
 					nav ul li a:focus{
 						background-color: #ffffff;
-						color:black;
+						color:#000000;
 						border-top: 1px solid rgb(39,52,105);
 					}
-
 #page-titles{
 	margin: 15px 0;
 	line-height: 1.3em;
@@ -223,3 +222,10 @@ iframe{
 		line-height: 70px;		
 	}
 }
+
+
+
+
+
+  
+
