--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,5 @@
-body{
+
+  body{
 	margin: 0;
 	padding: 0;
 	background: white;
@@ -40,18 +41,18 @@ nav{
 			display: inline-block;
 			margin-left: 10px;			
 			line-height: 40px;
-	border-left: 15px solid rgba(39,52,105,1);
+			border-left: 1px solid rgba(39,52,105,1);
 			font-weight: bold;
 
 		}
 			nav ul li a{
 				display: block;
-				padding: 0 10px;
+				padding: 0 8.5px;
 				text-decoration: none;
 				color: #ffffff;
 			}
 				nav ul li a:hover{
-					width: auto;
+					width: 100%;
   					background-color: #f62d2d;
 				}
 					nav ul li a:focus{
@@ -222,12 +223,6 @@ iframe{
 		line-height: 70px;		
 	}
 }
-
-
-
-
-
-  
 
 
 
