--- a/Style.css
+++ b/Style.css
@@ -227,7 +227,6 @@ iframe{
 }
 .language:focus{
 	border-top: none;
-	border-bottom: 3px solid red
 }
 	nav{
 		width:100%;
@@ -251,6 +250,9 @@ iframe{
 				nav ul li a:hover{
 					padding: 20px;
 				}
+                                nav ul li a:focus{
+                                        border-style: none;
+                                }
 
 	#cookiesBox{
 		font-size: 2.5em;  
