--- a/Style.css
+++ b/Style.css
@@ -218,6 +218,7 @@ iframe{
 }
 .language{
 	line-height: 0px;
+	color:red;
 	text-align: top;
 }
 
@@ -250,9 +251,6 @@ iframe{
 				nav ul li a:hover{
 					padding: 20px;
 				}
-                                nav ul li a:focus{
-                                        border-style: none;
-                                }
 
 	#cookiesBox{
 		font-size: 2.5em;  
