--- a/Style.css
+++ b/Style.css
@@ -33,12 +33,15 @@ body{
 }
 .language{
 	line-height: 0px;
-	color:red;
 	text-align: top;
+	border-style: none;
 }
 
 .language:hover{
-		background-color: unset;
+	background-color: unset;
+}
+.language:focus{
+	border-style: none;
 }
 
 
@@ -209,6 +212,10 @@ iframe{
 		background: rgb(39,52,105);
 		background: linear-gradient(180deg, rgba(39,52,105,1) 40%, rgba(255,255,255,1) 150%);
 	}
+	
+	.language:hover{
+		padding:0px;
+	}
 
 	nav{
 		width:100%;
@@ -230,7 +237,7 @@ iframe{
 				line-height: 70px;	
 			}
 				nav ul li a:hover{
-					padding: 20px;
+					padding: 5px 0;
 				}
 
 	#cookiesBox{
