--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,5 @@
+html { scroll-behavior: smooth; }
+
 body{
 	margin: 0;
 	padding: 0;
@@ -106,6 +108,17 @@ img{
 		padding: 40px;
 	}
 
+#catalog{
+	float: right;
+	width: 250px;
+	margin-right: 150px;
+}
+
+#bt_download{
+	font-color: blue;
+	font-size: 22px;
+}
+
 #secondary-footer{
 	margin-top: 40px;
 	text-align: center;
@@ -175,7 +188,86 @@ iframe{
 	vertical-align: top;
 }
 
+@keyframes slide {
+	0% { transform: translateX(0); }
+	10% { transform: translateX(0); }
 
+	15% { transform: translateX(-100%); }
+	30% { transform: translateX(-100%); }
+
+	35% { transform: translateX(-200%); }
+	50% { transform: translateX(-200%); }
+
+	55% { transform: translateX(-300%); }
+	70% { transform: translateX(-300%); }
+
+	75% { transform: translateX(-400%); }
+	90% { transform: translateX(-400%); }
+
+	95% { transform: translateX(-500%); }
+	100% { transform: translateX(-500%); }
+}
+
+* { box-sizing: border-box; }
+
+
+.wrapper {
+	width: 100%;
+	margin: 0 auto;
+}
+
+.slider {
+	position: relative;
+}
+
+.slides {
+	position: relative;
+	display: flex;
+	overflow: hidden;
+	list-style: none;
+}
+
+.slide {
+	width: 100%;
+	flex-shrink: 0;
+	animation-name: slide;
+	animation-duration: 20s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+.slides:hover .slide {
+	animation-play-state: paused;
+}
+
+.slide img {
+	width: 100%;
+	vertical-align: top;
+}
+
+.slide a {
+	width: 94.5%;
+	display: inline-block;
+	position: relative;
+}
+
+.slide:target {
+	animation-name: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 50;
+}
+
+
+
+@media only screen and (max-width: 1000px) {
+	.slide {
+		width: 100%;
+	}
+}
 
 /* MOBILE DEVICES*/
 
@@ -193,6 +285,11 @@ iframe{
 		position: relative;
 		align-items: center;
 		margin: 0 auto;
+	}
+
+	#catalog{
+		float: left;
+		width: 100%;
 	}
 
 	#page-titles{
@@ -246,3 +343,4 @@ iframe{
 		line-height: 70px;		
 	}
 }
+
